--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Use arrow keys (up and down to accelerate/decelerate, left and right to rotate) and press "h" for hyperspace
+		    Use arrow keys (up and down to accelerate/decelerate, left and right to rotate), press "h" for hyperspace, "g" to shoot
 	    </footer>
 	</body>
 </html>
